Cache the atmosphere (increases performance).

Backported from commit cb2e071ac687afae7d229500d38cd03b1ded5281.

BUG: 311119
REVIEW: 107581